public class Catalogue {
    private Contenu[] contenus;

    public void rechercherContenu() {}
    public void filtrerContenu() {}
    public void trierContenu() {}
    public void consulterCatalogue() {}
}