public class EquipeEPSIFLIX extends Utilisateur {
    public void classerContenus() {}
    public void donnerCoupDeCoeur() {}
}