public enum TypeAbonnement {
    BASIQUE,
    PREMIUM,
    FAMILY
}