public class BandeAnnonce {
    private String lien;
    private String duree;
    private Date dateDeSortie;
}