package java.fr.epsiflix.domain.catalogue.model;

public enum Categorie {
    FILM,
    SERIE,
    DOCUMENTAIRE,
    SPECTACLE,
    EMISSION
}