public class Episode {
    private String titre;
    private Integer numero;
    private String duree;
}