import java.util.Date;

public class Commentaire {
    private String contenu;
    private Date date;
}