public class Moderation {
    private String suiviInteractions;

    public void moderer() {}
}