public class Administrateur extends Utilisateur {
    public void gererContenusUtilisateurs() {}
    public void modererInteractions() {}
    public void suivreInteractions() {}
    public void accederTableauDeBordAnalyse() {}
}