public class ClientSansAbonnement extends Utilisateur {
    public void choisirContenu() {}
    public void enregistrerContenu() {}
    public void voirDetailsContenu() {}
}