public class PreferenceUtilisateur {
    private String categoriePreferee;
}