@startuml Updated Domain Model

' Gestion des Utilisateurs
package "Gestion des utilisateurs" {
  class Utilisateur << AR >> {
    -identifiant: UUID
    -motDePasse: String
    -nom: String
    -prenom: String
    -dateNaissance: Date
    -email: String
    +seConnecter(): void
    +seDeconnecter(): void
    +modifierMotDePasse(AncienMotDePasse: String, NouveauMotDePasse: String): void
    +modifierProfil(): void
    +consulterProfil(): void
  }

  class ClientSansAbonnement << VO >> {
    +choisirContenu(): void
    +enregistrerContenu(): void
    +voirDetailsContenu(): void
  }

  class ClientAvecAbonnement << VO >> {
    -dateDebut: Date
    -dateFin: Date
    +consulterHistorique(): void
    +consulterRecommandations(): void
    +consulterCoupDeCoeur(): void
    +visionnerContenuEnIllimite(): void
    +posterCommentaire(contenu: String): void
    +accederForum(): void
    +participerLive(theme: String): void
  }

  class ProfessionnelAudiovisuel << AR >> {
    +accederTableauDeBord(): void
    +organiserLive(theme: String): void
    +envoyerContenu(contenu: Contenu): void
  }

  class EquipeEPSIFLIX << AR >> {
    +classerContenus(): void
    +donnerCoupDeCoeur(): void
  }

  class Administrateur << AR >> {
    +gererContenusUtilisateurs(): void
    +modererInteractions(): void
    +suivreInteractions(): void
    +accederTableauDeBordAnalyse(): void
  }

  enum TypeAbonnement << VO >> {
    BASIQUE
    PREMIUM
    FAMILY
  }

  class PreferenceUtilisateur << VO >> {
    -genre: String
    -categorie: String
    -acteur: String
    -realisateur: String
  }
}
' Catalogue de contenu
package "Catalogue de contenu" {
  entity Contenu << AR >> {
    -titre: String
    -description: String
    -dateAjout: Date
    -duree: String
    -lien: String
    +visionner(): void
    -metadonnees: Metadonnees
    -episodes: List<Episode>
    -bandeAnnonces: List<BandeAnnonce>
  }

  class Metadonnees << VO >> {
    -genre: String
    -dateDeSortie: Date
  }

  entity Serie << AR >> {
    -nombreSaisons: Integer
    -episodes: List<Episode>
  }

  class Episode << VO >> {
    -titre: String
    -numero: Integer
    -duree: String
  }

  enum Categorie << VO >> {
    FILM
    SERIE
    DOCUMENTAIRE
    SPECTACLE
    EMISSION
  }

  entity Catalogue << AR >> {
    -contenus: List<Contenu>
    +rechercherContenu(criteres): List<Contenu>
    +filtrerContenu(filtre): List<Contenu>
    +trierContenu(critere): List<Contenu>
    +consulterCatalogue(): List<Contenu>
  }

  class BandeAnnonce << VO >> {
    -lien: String
    -duree: String
    -dateDeSortie: Date
  }
}


package "Interaction des utilisateurs" {
  class Interaction << AR >> {
    +posterCommentaire(commentaire: Commentaire): void
    +lireCommentaire(): Commentaire[]
    +participerForum(theme: String): void
    +assisterLive(theme: String): void
  }

  class Commentaire << VO >> {
    -contenu: String
    -date: Date
  }

  class Forum << VO >> {
    -saison: String
  }

  class Live << VO >> {
    -theme: String
  }

  class Moderation {
    +suiviInteractions: String
    +moderer(): void
  }
}

Utilisateur <|-- ClientSansAbonnement
Utilisateur <|-- ClientAvecAbonnement
Utilisateur <|-- ProfessionnelAudiovisuel
Utilisateur <|-- EquipeEPSIFLIX
Utilisateur <|-- Administrateur
Contenu "1" *-- "*" Metadonnees
Serie --|> Contenu
Serie "1" *-- "1..*" Episode
Contenu "1" o-- "0..*" Categorie
ClientAvecAbonnement --> TypeAbonnement
ClientAvecAbonnement "1" -- "*" PreferenceUtilisateur
ClientSansAbonnement "1" -- "*" PreferenceUtilisateur

@enduml
